Add show/hide data button for line chart

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -380,7 +380,8 @@
     "community": "Community",
     "playstyle": "Playstyle",
     "disciplines": "Disciplines",
-    "clans": "Clans"
+    "clans": "Clans",
+    "show_data": "Show Data"
   },
   "vtes": {
     "type": {
