--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -380,7 +380,8 @@
     "community": "Comunidad",
     "playstyle": "Estilo de juego",
     "disciplines": "Disciplinas",
-    "clans": "Clanes"
+    "clans": "Clanes",
+    "show_data": "Mostrar datos"
   },
   "vtes": {
     "type": {
