--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -372,7 +372,8 @@
     "community": "Comunidade",
     "playstyle": "Estilo de jogo",
     "disciplines": "Disciplinas",
-    "clans": "Clãs"
+    "clans": "Clãs",
+    "show_data": "Mostrar dados"
   },
   "vtes": {
     "type": {
