--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -487,7 +487,8 @@
       "innocent": "Innocent",
       "judge": "Judge",
       "martyr": "Martyr",
-      "redeemer": "Redeemer"
+      "redeemer": "Redeemer",
+      "hecata": "Hecata"
     },
     "tags": {
       "ramp": "ramp",
