--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -479,7 +479,8 @@
       "innocent": "Innocent",
       "judge": "Judge",
       "martyr": "Martyr",
-      "redeemer": "Redeemer"
+      "redeemer": "Redeemer",
+      "hecata": "Hecata"
     },
     "tags": {
       "ramp": "ramp",
