Fix error handling

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -394,7 +394,7 @@
     "title": "VTES AI Chat",
     "new_chat": "New chat",
     "must_3_characters": "Must be at least 3 characters",
-    "send_message": "Send message",
+    "send_message": "Ask me a question about VTES",
     "history": "History",
     "examples": "Examples",
     "example_1": "Can I play a Delaying Tactics after votes and ballots have been cast?",
