--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -394,7 +394,7 @@
     "title": "VTES AI Chat",
     "new_chat": "Nuevo chat",
     "must_3_characters": "Debe tener al menos 3 caracteres",
-    "send_message": "Enviar mensaje",
+    "send_message": "Haz una pregunta sobre VTES (En inglés doy mejores respuestas)",
     "history": "Historial",
     "examples": "Ejemplos",
     "example_1": "¿Puedo jugar Delaying Tactics después de que se hayan emitido votos?",
