--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -386,7 +386,7 @@
     "title": "VTES AI Chat",
     "new_chat": "Novo chat",
     "must_3_characters": "Deve ter pelo menos 3 caracteres",
-    "send_message": "Enviar mensagem",
+    "send_message": "Faça uma pergunta sobre VTES (Eu dou respostas melhores em inglês)",
     "history": "Histórico",
     "examples": "Exemplos",
     "example_1": "Posso jogar Táticas de Atraso depois de votos terem sido lançadas?",
